fixed footer spacing

--- a/assets/css/lamana.css
+++ b/assets/css/lamana.css
@@ -106,7 +106,7 @@ iframe {
 .footer {
   /* position: fixed; */
   width: 100%;
- padding:50px;
+
   background-color: #ed553b;
   color: white;
   font-size: 12px;
